--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>family age</title>
+		<title>age</title>
 		<script type="text/javascript">
 			function fun(){
 				var time = new Date();
